2014-07-03  Segher Boessenkool  <segher@kernel.crashing.org>

	* config/rs6000/rs6000.md (rotl<mode>3, ashl<mode>3, lshr<mode>3,
	ashr<mode>3): Correct mode of operands[2].
	(rotl<mode>3_dot, rotl<mode>3_dot2, ashl<mode>3_dot, ashl<mode>3_dot2,
	lshr<mode>3_dot, lshr<mode>3_dot2, ashr<mode>3_dot, ashr<mode>3_dot2):
	Correct mode of operands[2].  Fix split condition.

2014-07-03  Richard Earnshaw  <rearnsha@arm.com>

	* arm.md (arch): Add armv6_or_vfpv3.
	(arch_enabled): Add test for the above.
	* vfp.md (divsf_vfp, divdf_vfp): Add earlyclobber when code can run
	on VFP9.
	(sqrtsf_vfp, sqrtdf_vfp): Likewise.
	
2014-07-03  Jakub Jelinek  <jakub@redhat.com>

	* gcov-io.c (gcov_read_words): Don't call memmove if excess is 0.
	* data-streamer-in.c (streamer_read_hwi): Shift UHWI 1 instead of
	HWI 1 and negate the unsigned value.
	* expmed.c (expand_sdiv_pow2): For modes wider than word always
	use AND instead of shift.
	* wide-int-print.cc (print_decs): Negate UHWI instead of HWI.

2014-07-03  Marek Polacek  <polacek@redhat.com>

	* doc/invoke.texi (-fsanitize=bounds): Tweak wording.
	(-fsanitize=float-divide-by-zero): Move to the table with
	-fsanitize=undefined suboptions.
	(-fsanitize=float-cast-overflow): Likewise.

2014-07-03  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/rs6000/rs6000.c (rs6000_adjust_atomic_subword): Use
	BYTES_BIG_ENDIAN rather than WORDS_BIG_ENDIAN to check for byte
	endianness.

2014-07-03  Zhenqiang Chen  <zhenqiang.chen@linaro.org>

	* loop-invariant.c (struct invariant): Add a new member: eqno;
	(find_identical_invariants): Update eqno;
	(create_new_invariant): Init eqno;
	(get_inv_cost): Compute comp_cost with eqno;

2014-07-02  Segher Boessenkool  <segher@kernel.crashing.org>

	* genconfig.c (have_rotate_flag, have_rotatert_flag): New variables.
	(walk_insn_part) <ROTATE, ROTATERT>: New cases.
	(main): Conditionally write HAVE_rotate resp. HAVE_rotatert.
	* simplify-rtx.c (simplify_binary_operation_1) <ROTATE, ROTATERT>: