@@ -1,3 +1,8 @@
+2014-07-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/61682
+	* gcc.c-torture/execute/pr61682.c: New test.
+
 2014-07-03  Segher Boessenkool  <segher@kernel.crashing.org>
 
 	* gcc.target/powerpc/shift-dot.c: New test.
